Spring Boot 4 Upgrade fixes (#233)